y.output
   0  $accept : programa $end

   1  programa : conjunto_sentencias

   2  conjunto_sentencias : sentencias_declarativas
   3                      | sentencias_declarativas begin sentencias_ejecutables end
   4                      | begin sentencias_ejecutables end

   5  sentencias_declarativas : sentencias_declarativas sentencia_declarativa
   6                          | sentencia_declarativa

   7  sentencias_ejecutables : sentencias_ejecutables sentencia_ejecutable
   8                         | sentencia_ejecutable

   9  sentencia_declarativa : tipo lista_variables ';'
  10                        | tipo ID '[' CTE_E ']' ';'
  11                        | ID '[' CTE_E ']' ';'
  12                        | lista_variables ';'
  13                        | tipo ID '[' CTE_E ']'
  14                        | tipo lista_variables
  15                        | tipo ID '[' CTE_E ';'
  16                        | tipo ID CTE_E ']' ';'
  17                        | tipo ';'
  18                        | tipo '[' CTE_E ']' ';'
  19                        | tipo ID '[' ']' ';'

  20  tipo : int
  21       | float

  22  lista_variables : lista_variables ',' ID
  23                  | ID

  24  sentencia_ejecutable : selecion_ejecutable
  25                       | control_ejecutable
  26                       | salida_ejecutable
  27                       | asign

  28  selecion_ejecutable : if '(' condicion ')' bloque_sentencias else bloque_sentencias end_if ';'
  29                      | if '(' condicion ')' bloque_sentencias end_if ';'
  30                      | if '(' condicion ')' bloque_sentencias else bloque_sentencias ';'
  31                      | if '(' condicion ')' bloque_sentencias bloque_sentencias end_if ';'
  32                      | if '(' condicion bloque_sentencias else bloque_sentencias end_if ';'
  33                      | if '(' ')' bloque_sentencias else bloque_sentencias end_if ';'
  34                      | if condicion ')' bloque_sentencias else bloque_sentencias end_if ';'
  35                      | '(' condicion ')' bloque_sentencias else bloque_sentencias end_if ';'
  36                      | '(' condicion ')' bloque_sentencias end_if ';'
  37                      | if condicion ')' bloque_sentencias end_if ';'
  38                      | if '(' ')' bloque_sentencias end_if ';'
  39                      | if '(' condicion bloque_sentencias end_if ';'
  40                      | if '(' condicion ')' end_if ';'
  41                      | if '(' condicion ')' bloque_sentencias ';'

  42  condicion : expresion_aritmetica operador expresion_aritmetica
  43            | operador expresion_aritmetica
  44            | expresion_aritmetica expresion_aritmetica
  45            | expresion_aritmetica operador

  46  expresion_aritmetica : expresion_aritmetica '+' termino
  47                       | expresion_aritmetica '-' termino
  48                       | termino

  49  termino : termino '*' factor
  50          | termino '/' factor
  51          | factor

  52  factor : variable
  53         | CTE_E
  54         | CTE_F
  55         | invocacion_metodo

  56  variable : ID '[' ID ']'
  57           | ID '[' CTE_E ']'
  58           | ID

  59  operador : '<'
  60           | MENORIGUAL
  61           | '>'
  62           | MAYORIGUAL
  63           | DESTINTO
  64           | IGUAL

  65  bloque_sentencias : sentencia_declarativa
  66                    | sentencia_ejecutable
  67                    | begin sentencias sentencia_ejecutable end
  68                    | begin sentencias sentencia_declarativa end

  69  control_ejecutable : do bloque_sentencias until '(' condicion ')' ';'
  70                     | bloque_sentencias until '(' condicion ')' ';'
  71                     | do until '(' condicion ')' ';'
  72                     | do bloque_sentencias '(' condicion ')' ';'
  73                     | do bloque_sentencias until condicion ')' ';'
  74                     | do bloque_sentencias until '(' ')' ';'
  75                     | do bloque_sentencias until '(' condicion ';'

  76  salida_ejecutable : print '(' CADENA ')' ';'
  77                    | '(' CADENA ')' ';'
  78                    | print CADENA ')' ';'
  79                    | print '(' ')' ';'
  80                    | print '(' CADENA ';'

  81  asign : variable ASIGNACION expresion_aritmetica ';'
  82        | ASIGNACION expresion_aritmetica ';'
  83        | variable expresion_aritmetica ';'
  84        | variable ASIGNACION ';'

  85  invocacion_metodo : ID '.' ID '(' ')'

  86  sentencias : sentencias sentencia_declarativa
  87             | sentencias sentencia_ejecutable
  88             | sentencia_declarativa
  89             | sentencia_ejecutable

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	int  shift 2
	begin  shift 3
	float  shift 4
	.  error

	programa  goto 5
	conjunto_sentencias  goto 6
	sentencias_declarativas  goto 7
	sentencia_declarativa  goto 8
	tipo  goto 9
	lista_variables  goto 10


state 1
	sentencia_declarativa : ID . '[' CTE_E ']' ';'  (11)
	lista_variables : ID .  (23)

	'['  shift 11
	';'  reduce 23
	','  reduce 23


state 2
	tipo : int .  (20)

	.  reduce 20


state 3
	conjunto_sentencias : begin . sentencias_ejecutables end  (4)

	ID  shift 12
	ASIGNACION  shift 13
	if  shift 14
	print  shift 15
	int  shift 2
	begin  shift 16
	do  shift 17
	float  shift 4
	'('  shift 18
	.  error

	sentencias_ejecutables  goto 19
	sentencia_declarativa  goto 20
	sentencia_ejecutable  goto 21
	tipo  goto 9
	lista_variables  goto 10
	selecion_ejecutable  goto 22
	control_ejecutable  goto 23
	salida_ejecutable  goto 24
	asign  goto 25
	bloque_sentencias  goto 26
	variable  goto 27


state 4
	tipo : float .  (21)

	.  reduce 21


state 5
	$accept : programa . $end  (0)

	$end  accept


state 6
	programa : conjunto_sentencias .  (1)

	.  reduce 1


state 7
	conjunto_sentencias : sentencias_declarativas .  (2)
	conjunto_sentencias : sentencias_declarativas . begin sentencias_ejecutables end  (3)
	sentencias_declarativas : sentencias_declarativas . sentencia_declarativa  (5)

	ID  shift 1
	int  shift 2
	begin  shift 28
	float  shift 4
	$end  reduce 2

	sentencia_declarativa  goto 29
	tipo  goto 9
	lista_variables  goto 10


state 8
	sentencias_declarativas : sentencia_declarativa .  (6)

	.  reduce 6


state 9
	sentencia_declarativa : tipo . lista_variables ';'  (9)
	sentencia_declarativa : tipo . ID '[' CTE_E ']' ';'  (10)
	sentencia_declarativa : tipo . ID '[' CTE_E ']'  (13)
	sentencia_declarativa : tipo . lista_variables  (14)
	sentencia_declarativa : tipo . ID '[' CTE_E ';'  (15)
	sentencia_declarativa : tipo . ID CTE_E ']' ';'  (16)
	sentencia_declarativa : tipo . ';'  (17)
	sentencia_declarativa : tipo . '[' CTE_E ']' ';'  (18)
	sentencia_declarativa : tipo . ID '[' ']' ';'  (19)

	ID  shift 30
	';'  shift 31
	'['  shift 32
	.  error

	lista_variables  goto 33


state 10
	sentencia_declarativa : lista_variables . ';'  (12)
	lista_variables : lista_variables . ',' ID  (22)

	';'  shift 34
	','  shift 35
	.  error


state 11
	sentencia_declarativa : ID '[' . CTE_E ']' ';'  (11)

	CTE_E  shift 36
	.  error


state 12
	sentencia_declarativa : ID . '[' CTE_E ']' ';'  (11)
	lista_variables : ID .  (23)
	variable : ID . '[' ID ']'  (56)
	variable : ID . '[' CTE_E ']'  (57)
	variable : ID .  (58)

	'['  shift 37
	ID  reduce 58
	CTE_E  reduce 58
	CTE_F  reduce 58
	ASIGNACION  reduce 58
	';'  reduce 23
	','  reduce 23


state 13
	asign : ASIGNACION . expresion_aritmetica ';'  (82)

	ID  shift 38
	CTE_E  shift 39
	CTE_F  shift 40
	.  error

	expresion_aritmetica  goto 41
	termino  goto 42
	factor  goto 43
	variable  goto 44
	invocacion_metodo  goto 45


state 14
	selecion_ejecutable : if . '(' condicion ')' bloque_sentencias else bloque_sentencias end_if ';'  (28)
	selecion_ejecutable : if . '(' condicion ')' bloque_sentencias end_if ';'  (29)
	selecion_ejecutable : if . '(' condicion ')' bloque_sentencias else bloque_sentencias ';'  (30)
	selecion_ejecutable : if . '(' condicion ')' bloque_sentencias bloque_sentencias end_if ';'  (31)
	selecion_ejecutable : if . '(' condicion bloque_sentencias else bloque_sentencias end_if ';'  (32)
	selecion_ejecutable : if . '(' ')' bloque_sentencias else bloque_sentencias end_if ';'  (33)
	selecion_ejecutable : if . condicion ')' bloque_sentencias else bloque_sentencias end_if ';'  (34)
	selecion_ejecutable : if . condicion ')' bloque_sentencias end_if ';'  (37)
	selecion_ejecutable : if . '(' ')' bloque_sentencias end_if ';'  (38)
	selecion_ejecutable : if . '(' condicion bloque_sentencias end_if ';'  (39)
	selecion_ejecutable : if . '(' condicion ')' end_if ';'  (40)
	selecion_ejecutable : if . '(' condicion ')' bloque_sentencias ';'  (41)

	ID  shift 38
	CTE_E  shift 39
	CTE_F  shift 40
	MAYORIGUAL  shift 46
	MENORIGUAL  shift 47
	DESTINTO  shift 48
	IGUAL  shift 49
	'('  shift 50
	'<'  shift 51
	'>'  shift 52
	.  error

	condicion  goto 53
	expresion_aritmetica  goto 54
	operador  goto 55
	termino  goto 42
	factor  goto 43
	variable  goto 44
	invocacion_metodo  goto 45


state 15
	salida_ejecutable : print . '(' CADENA ')' ';'  (76)
	salida_ejecutable : print . CADENA ')' ';'  (78)
	salida_ejecutable : print . '(' ')' ';'  (79)
	salida_ejecutable : print . '(' CADENA ';'  (80)

	CADENA  shift 56
	'('  shift 57
	.  error


state 16
	bloque_sentencias : begin . sentencias sentencia_ejecutable end  (67)
	bloque_sentencias : begin . sentencias sentencia_declarativa end  (68)

	ID  shift 12
	ASIGNACION  shift 13
	if  shift 14
	print  shift 15
	int  shift 2
	begin  shift 16
	do  shift 17
	float  shift 4
	'('  shift 18
	.  error

	sentencia_declarativa  goto 58
	sentencia_ejecutable  goto 59
	tipo  goto 9
	lista_variables  goto 10
	selecion_ejecutable  goto 22
	control_ejecutable  goto 23
	salida_ejecutable  goto 24
	asign  goto 25
	bloque_sentencias  goto 26
	variable  goto 27
	sentencias  goto 60


state 17
	control_ejecutable : do . bloque_sentencias until '(' condicion ')' ';'  (69)
	control_ejecutable : do . until '(' condicion ')' ';'  (71)
	control_ejecutable : do . bloque_sentencias '(' condicion ')' ';'  (72)
	control_ejecutable : do . bloque_sentencias until condicion ')' ';'  (73)
	control_ejecutable : do . bloque_sentencias until '(' ')' ';'  (74)
	control_ejecutable : do . bloque_sentencias until '(' condicion ';'  (75)

	ID  shift 12
	ASIGNACION  shift 13
	if  shift 14
	print  shift 15
	int  shift 2
	begin  shift 16
	do  shift 17
	until  shift 61
	float  shift 4
	'('  shift 18
	.  error

	sentencia_declarativa  goto 20
	sentencia_ejecutable  goto 62
	tipo  goto 9
	lista_variables  goto 10
	selecion_ejecutable  goto 22
	control_ejecutable  goto 23
	salida_ejecutable  goto 24
	asign  goto 25
	bloque_sentencias  goto 63
	variable  goto 27


state 18
	selecion_ejecutable : '(' . condicion ')' bloque_sentencias else bloque_sentencias end_if ';'  (35)
	selecion_ejecutable : '(' . condicion ')' bloque_sentencias end_if ';'  (36)
	salida_ejecutable : '(' . CADENA ')' ';'  (77)

	ID  shift 38
	CTE_E  shift 39
	CTE_F  shift 40
	CADENA  shift 64
	MAYORIGUAL  shift 46
	MENORIGUAL  shift 47
	DESTINTO  shift 48
	IGUAL  shift 49
	'<'  shift 51
	'>'  shift 52
	.  error

	condicion  goto 65
	expresion_aritmetica  goto 54
	operador  goto 55
	termino  goto 42
	factor  goto 43
	variable  goto 44
	invocacion_metodo  goto 45


state 19
	conjunto_sentencias : begin sentencias_ejecutables . end  (4)
	sentencias_ejecutables : sentencias_ejecutables . sentencia_ejecutable  (7)

	ID  shift 12
	ASIGNACION  shift 13
	if  shift 14
	print  shift 15
	int  shift 2
	begin  shift 16
	end  shift 66
	do  shift 17
	float  shift 4
	'('  shift 18
	.  error

	sentencia_declarativa  goto 20
	sentencia_ejecutable  goto 67
	tipo  goto 9
	lista_variables  goto 10
	selecion_ejecutable  goto 22
	control_ejecutable  goto 23
	salida_ejecutable  goto 24
	asign  goto 25
	bloque_sentencias  goto 26
	variable  goto 27


state 20
	bloque_sentencias : sentencia_declarativa .  (65)

	.  reduce 65


state 21
	sentencias_ejecutables : sentencia_ejecutable .  (8)
	bloque_sentencias : sentencia_ejecutable .  (66)

	ID  reduce 8
	ASIGNACION  reduce 8
	if  reduce 8
	print  reduce 8
	int  reduce 8
	begin  reduce 8
	end  reduce 8
	do  reduce 8
	until  reduce 66
	float  reduce 8
	'('  reduce 8


state 22
	sentencia_ejecutable : selecion_ejecutable .  (24)

	.  reduce 24


state 23
	sentencia_ejecutable : control_ejecutable .  (25)

	.  reduce 25


state 24
	sentencia_ejecutable : salida_ejecutable .  (26)

	.  reduce 26


state 25
	sentencia_ejecutable : asign .  (27)

	.  reduce 27


state 26
	control_ejecutable : bloque_sentencias . until '(' condicion ')' ';'  (70)

	until  shift 68
	.  error


state 27
	asign : variable . ASIGNACION expresion_aritmetica ';'  (81)
	asign : variable . expresion_aritmetica ';'  (83)
	asign : variable . ASIGNACION ';'  (84)

	ID  shift 38
	CTE_E  shift 39
	CTE_F  shift 40
	ASIGNACION  shift 69
	.  error

	expresion_aritmetica  goto 70
	termino  goto 42
	factor  goto 43
	variable  goto 44
	invocacion_metodo  goto 45


state 28
	conjunto_sentencias : sentencias_declarativas begin . sentencias_ejecutables end  (3)

	ID  shift 12
	ASIGNACION  shift 13
	if  shift 14
	print  shift 15
	int  shift 2
	begin  shift 16
	do  shift 17
	float  shift 4
	'('  shift 18
	.  error

	sentencias_ejecutables  goto 71
	sentencia_declarativa  goto 20
	sentencia_ejecutable  goto 21
	tipo  goto 9
	lista_variables  goto 10
	selecion_ejecutable  goto 22
	control_ejecutable  goto 23
	salida_ejecutable  goto 24
	asign  goto 25
	bloque_sentencias  goto 26
	variable  goto 27


state 29
	sentencias_declarativas : sentencias_declarativas sentencia_declarativa .  (5)

	.  reduce 5


state 30
	sentencia_declarativa : tipo ID . '[' CTE_E ']' ';'  (10)
	sentencia_declarativa : tipo ID . '[' CTE_E ']'  (13)
	sentencia_declarativa : tipo ID . '[' CTE_E ';'  (15)
	sentencia_declarativa : tipo ID . CTE_E ']' ';'  (16)
	sentencia_declarativa : tipo ID . '[' ']' ';'  (19)
	lista_variables : ID .  (23)

	CTE_E  shift 72
	'['  shift 73
	$end  reduce 23
	ID  reduce 23
	ASIGNACION  reduce 23
	if  reduce 23
	else  reduce 23
	end_if  reduce 23
	print  reduce 23
	int  reduce 23
	begin  reduce 23
	end  reduce 23
	do  reduce 23
	until  reduce 23
	float  reduce 23
	';'  reduce 23
	','  reduce 23
	'('  reduce 23


state 31
	sentencia_declarativa : tipo ';' .  (17)

	.  reduce 17


state 32
	sentencia_declarativa : tipo '[' . CTE_E ']' ';'  (18)

	CTE_E  shift 74
	.  error


33: shift/reduce conflict (shift 75, reduce 14) on ';'
state 33
	sentencia_declarativa : tipo lista_variables . ';'  (9)
	sentencia_declarativa : tipo lista_variables .  (14)
	lista_variables : lista_variables . ',' ID  (22)

	';'  shift 75
	','  shift 35
	$end  reduce 14
	ID  reduce 14
	ASIGNACION  reduce 14
	if  reduce 14
	else  reduce 14
	end_if  reduce 14
	print  reduce 14
	int  reduce 14
	begin  reduce 14
	end  reduce 14
	do  reduce 14
	until  reduce 14
	float  reduce 14
	'('  reduce 14


state 34
	sentencia_declarativa : lista_variables ';' .  (12)

	.  reduce 12


state 35
	lista_variables : lista_variables ',' . ID  (22)

	ID  shift 76
	.  error


state 36
	sentencia_declarativa : ID '[' CTE_E . ']' ';'  (11)

	']'  shift 77
	.  error


state 37
	sentencia_declarativa : ID '[' . CTE_E ']' ';'  (11)
	variable : ID '[' . ID ']'  (56)
	variable : ID '[' . CTE_E ']'  (57)

	ID  shift 78
	CTE_E  shift 79
	.  error


state 38
	variable : ID . '[' ID ']'  (56)
	variable : ID . '[' CTE_E ']'  (57)
	variable : ID .  (58)
	invocacion_metodo : ID . '.' ID '(' ')'  (85)

	'['  shift 80
	'.'  shift 81
	ID  reduce 58
	CTE_E  reduce 58
	CTE_F  reduce 58
	ASIGNACION  reduce 58
	MAYORIGUAL  reduce 58
	MENORIGUAL  reduce 58
	DESTINTO  reduce 58
	IGUAL  reduce 58
	if  reduce 58
	print  reduce 58
	int  reduce 58
	begin  reduce 58
	do  reduce 58
	float  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'*'  reduce 58
	'/'  reduce 58
	';'  reduce 58
	'('  reduce 58
	')'  reduce 58
	'<'  reduce 58
	'>'  reduce 58


state 39
	factor : CTE_E .  (53)

	.  reduce 53


state 40
	factor : CTE_F .  (54)

	.  reduce 54


state 41
	expresion_aritmetica : expresion_aritmetica . '+' termino  (46)
	expresion_aritmetica : expresion_aritmetica . '-' termino  (47)
	asign : ASIGNACION expresion_aritmetica . ';'  (82)

	'+'  shift 82
	'-'  shift 83
	';'  shift 84
	.  error


state 42
	expresion_aritmetica : termino .  (48)
	termino : termino . '*' factor  (49)
	termino : termino . '/' factor  (50)
